1.Modify "[..](#..)" to "[`..`](#..)". 2.Remove hpo.ipynb and separete it into two chapters,developer and user.

--- a/docs/source/guide/developer/custom_hpo_prob.ipynb
+++ b/docs/source/guide/developer/custom_hpo_prob.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Deploy HPO with Custom Algorithms\n",
     "\n",
-    "In this chapter, we will focus on deploying HPO with custom algorithms, emphasizing the details rather than the overall workflow. A brief introduction to HPO deployment is provided in the previous chapter, [Efficient HPO with EvoX](#/guide/user/3-hpo), and prior reading is highly recommended."
+    "In this chapter, we will focus on deploying HPO with custom algorithms, emphasizing the details rather than the overall workflow. A brief introduction to HPO deployment is provided in the previous chapter, [`Efficient HPO with EvoX`](#/guide/user/3-hpo), and prior reading is highly recommended."
    ]
   },
   {
@@ -17,7 +17,7 @@
     "\n",
     "Since we need to transform the inner algorithm into the problem, it's crucial that the inner algorithm is parallelizable. Therefore, some modifications to the algorithm may be necessary.\n",
     "\n",
-    "To ensure the function is JIT-compilable, it must meet the conditions outlined in [JIT compoents](#/guide/developer/2-jit-able). In addition to these requirements, the algorithm must also satisfy the following two constraints:\n",
+    "To ensure the function is JIT-compilable, it must meet the conditions outlined in [`JIT compoents`](#/guide/developer/2-jit-able). In addition to these requirements, the algorithm must also satisfy the following two constraints:\n",
     "\n",
     "1. The algorithm should have no methods with in-place operations on the attributes of the algotirhm itself.\n",
     "\n",
@@ -69,9 +69,9 @@
     "        pass\n",
     "```\n",
     "\n",
-    "In EvoX, we can easily make the algorithm parallelizable by the [@trace_impl](#trace_impl) decorator. \n",
+    "In EvoX, we can easily make the algorithm parallelizable by the [`@trace_impl`](#trace_impl) decorator. \n",
     "\n",
-    "The parameter of this decorator is a non-parallelizable function, and the decorated function is a rewrite of the original function. Detailed introduction of [@trace_impl](#trace_impl) can be found in [JIT compoents](#/guide/developer/2-jit-able).\n",
+    "The parameter of this decorator is a non-parallelizable function, and the decorated function is a rewrite of the original function. Detailed introduction of [`@trace_impl`](#trace_impl) can be found in [`JIT compoents`](#/guide/developer/2-jit-able).\n",
     "\n",
     "Under this mechanism, we can retain the original function for use outside HPO tasks while enabling efficient computation within HPO tasks. Moreover, this modification is highly convenient."
    ]
@@ -82,11 +82,11 @@
    "source": [
     "## Utilizing the HPOMonitor\n",
     "\n",
-    "In the HPO task, we should use the [HPOMonitor](#HPOMonitor) to track the metrics of each inner algorithm. The [HPOMonitor](#HPOMonitor) adds only one method, `tell_fitness`, compared to the standard [monitor](#Monitor). This addition is designed to offer greater flexibility in evaluating metrics, as HPO tasks often involve multi-dimensional and complex metrics.\n",
+    "In the HPO task, we should use the [`HPOMonitor`](#HPOMonitor) to track the metrics of each inner algorithm. The [`HPOMonitor`](#HPOMonitor) adds only one method, `tell_fitness`, compared to the standard [`monitor`](#Monitor). This addition is designed to offer greater flexibility in evaluating metrics, as HPO tasks often involve multi-dimensional and complex metrics.\n",
     "\n",
-    "Users only need to create a subclass of HPOMonitor and override the `tell_fitness` method to define custom evaluation metrics.\n",
+    "Users only need to create a subclass of [`HPOMonitor`](#HPOMonitor) and override the `tell_fitness` method to define custom evaluation metrics.\n",
     "\n",
-    "We also provide a simple [HPOFitnessMonitor](#HPOFitnessMonitor), which supports calculating the 'IGD' and 'HV' metrics for multi-objective problems, and the minimum value for single-objective problems."
+    "We also provide a simple [`HPOFitnessMonitor`](#HPOFitnessMonitor), which supports calculating the 'IGD' and 'HV' metrics for multi-objective problems, and the minimum value for single-objective problems."
    ]
   },
   {
@@ -95,7 +95,7 @@
    "source": [
     "## A simple example\n",
     "\n",
-    "Here, we'll demonstrate a simple example of how to use HPO with EvoX. We will use the [PSO](#PSO) algorithm to search for the optimal hyperparameters of a basic algorithm to solve the sphere problem.\n",
+    "Here, we'll demonstrate a simple example of how to use HPO with EvoX. We will use the [`PSO`](#PSO) algorithm to search for the optimal hyperparameters of a basic algorithm to solve the sphere problem.\n",
     "\n",
     "First, let's import the necessary modules."
    ]
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we define an simple sphere problem. Note that this has no difference from the common [problems](#evox.problems)."
+    "Next, we define an simple sphere problem. Note that this has no difference from the common [`problems`](#evox.problems)."
    ]
   },
   {
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we define the algorithm. The original `step` function is non-parallelizable, so we rewrite it using the [@trace_impl](#trace_impl) decorator to make it parallelizable. Additionally, we modify in-place operations and adjust the Python control flow."
+    "Next, we define the algorithm. The original `step` function is non-parallelizable, so we rewrite it using the [`@trace_impl`](#trace_impl) decorator to make it parallelizable. Additionally, we modify in-place operations and adjust the Python control flow."
    ]
   },
   {
@@ -205,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To handle the Python control flow, we use [TracingCond](#TracingCond), [TracingWhile](#TracingWhile) and [TracingSwitch](#TracingSwitch). Since, in tracing mode, variables outside the method may be incorrectly interpreted as static variables, we need to use state to track them. A detailed introduction to [TracingCond](#TracingCond), [TracingWhile](#TracingWhile) and [TracingSwitch](#TracingSwitch) can be found in JIT Components. Below, we provide two equivalent implementations for the `trace_step` method.\n",
+    "To handle the Python control flow, we use [`TracingCond`](#TracingCond), [`TracingWhile`](#TracingWhile) and [`TracingSwitch`](#TracingSwitch). Since, in tracing mode, variables outside the method may be incorrectly interpreted as static variables, we need to use state to track them. A detailed introduction to [`TracingCond`](#TracingCond), [`TracingWhile`](#TracingWhile) and [`TracingSwitch`](#TracingSwitch) can be found in JIT Components. Below, we provide two equivalent implementations for the `trace_step` method.\n",
     "\n",
     "```python\n",
     "# Equivalent to the following code (Local function style)\n",
@@ -246,7 +246,7 @@
     "        self.fit = self.evaluate(pop)\n",
     "```\n",
     "\n",
-    "Next, we can use the [workflows](#evox.workflows) to wrap the [problem](#evox.problems), [algorithm](#evox.algorithms) and [monitor](#Monitor). Then we use the [HPOProblemWrapper](#HPOProblemWrapper) to transform the workflow to an HPO problem."
+    "Next, we can use the [`StdWorkflow`](#StdWorkflow) to wrap the [`problem`](#evox.problems), [`algorithm`](#evox.algorithms) and [`monitor`](#Monitor). Then we use the [`HPOProblemWrapper`](#HPOProblemWrapper) to transform the [`StdWorkflow`](#StdWorkflow) to HPO problem."
    ]
   },
   {
@@ -270,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can test whether the [HPOProblemWrapper](#HPOProblemWrapper) correctly recognizes the hyperparameters we defined. Since we have made no modifications to the hyperparameters for the 7 instances, they should be identical across all instances."
+    "We can test whether the [`HPOProblemWrapper`](#HPOProblemWrapper) correctly recognizes the hyperparameters we defined. Since we have made no modifications to the hyperparameters for the 7 instances, they should be identical across all instances."
    ]
   },
   {
@@ -303,7 +303,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also specify our own set of hyperparameter values. Note that the number of hyperparameter sets must match the number of instances in the [HPOProblemWrapper](#HPOProblemWrapper). The custom hyperparameters should be provided as a dictionary and wrapped using the [Parameter](#Parameter)."
+    "We can also specify our own set of hyperparameter values. Note that the number of hyperparameter sets must match the number of instances in the [`HPOProblemWrapper`](#HPOProblemWrapper). The custom hyperparameters should be provided as a dictionary and wrapped using the [`Parameter`](#Parameter)."
    ]
   },
   {
@@ -344,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we use the [PSO](#PSO) algorithm to optimize the hyperparameters of `ExampleAlgorithm`. Note that the population size of the [PSO](#PSO) must match the number of instances; otherwise, unexpected errors may occur. In this case, we need to transform the solution in the outer workflow, as the [HPOProblemWrapper](#HPOProblemWrapper) requires a dictionary as input."
+    "Now, we use the [`PSO`](#PSO) algorithm to optimize the hyperparameters of `ExampleAlgorithm`. Note that the population size of the [`PSO`](#PSO) must match the number of instances; otherwise, unexpected errors may occur. In this case, we need to transform the solution in the outer workflow, as the [`HPOProblemWrapper`](#HPOProblemWrapper) requires a dictionary as input."
    ]
   },
   {
