--- a/docs/source/guide/user/3-hpo.ipynb
+++ b/docs/source/guide/user/3-hpo.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "HPO plays a crucial role in many machine learning tasks but is often overlooked due to its high computational cost, which can sometimes take days to process, as well as the challenges involved in deployment.\n",
     "\n",
-    "With EvoX, we can simplify HPO deployment using the [HPOProblemWrapper](#HPOProblemWrapper) and achieve efficient computation by leveraging the vmap method and GPU acceleration."
+    "With EvoX, we can simplify HPO deployment using the [`HPOProblemWrapper`](#HPOProblemWrapper) and achieve efficient computation by leveraging the vmap method and GPU acceleration."
    ]
   },
   {
@@ -25,7 +25,7 @@
     ":align: center\n",
     "```\n",
     "\n",
-    "The key to deploying HPO with EvoX is to transform the [workflows](#evox.workflows) into [problems](#evox.problems) using the [HPOProblemWrapper](#HPOProblemWrapper). Once transformed, we can treat the [workflows](#evox.workflows) as standard [problems](#evox.problems). The input to the 'HPO problem' consists of the hyperparameters, and the output is the evaluation metrics."
+    "The key to deploying HPO with EvoX is to transform the [`workflows`](#evox.workflows) into [`problems`](#evox.problems) using the [`HPOProblemWrapper`](#HPOProblemWrapper). Once transformed, we can treat the [`workflows`](#evox.workflows) as standard [`problems`](#evox.problems). The input to the 'HPO problem' consists of the hyperparameters, and the output is the evaluation metrics."
    ]
   },
   {
@@ -34,7 +34,7 @@
    "source": [
     "## The Key Component -- `HPOProblemWrapper`\n",
     "\n",
-    "To ensure the [HPOProblemWrapper](#HPOProblemWrapper) recognizes the hyperparameters, we need to wrap them using [Parameter](#Parameter). With this straightforward step, the hyperparameters will be automatically identified.\n",
+    "To ensure the [`HPOProblemWrapper`](#HPOProblemWrapper) recognizes the hyperparameters, we need to wrap them using [`Parameter`](#Parameter). With this straightforward step, the hyperparameters will be automatically identified.\n",
     "\n",
     "```python\n",
     "class ExampleAlgorithm(Algorithm):\n",
@@ -55,9 +55,9 @@
    "source": [
     "## Utilizing the `HPOFitnessMonitor`\n",
     "\n",
-    "We provide an [HPOFitnessMonitor](#HPOFitnessMonitor) that supports calculating 'IGD' and 'HV' metrics for multi-objective problems, as well as the minimum value for single-objective problems.\n",
+    "We provide an [`HPOFitnessMonitor`](#HPOFitnessMonitor) that supports calculating 'IGD' and 'HV' metrics for multi-objective problems, as well as the minimum value for single-objective problems.\n",
     "\n",
-    "It is important to note that the [HPOFitnessMonitor](#HPOFitnessMonitor) is a basic monitor designed for HPO problems. You can also create your own customized monitor flexibly using the approach outlined in [Deploy HPO with Custom Algorithms](#/guide/developer/custom_hpo_prob)."
+    "It is important to note that the [`HPOFitnessMonitor`](#HPOFitnessMonitor) is a basic monitor designed for HPO problems. You can also create your own customized monitor flexibly using the approach outlined in [`Deploy HPO with Custom Algorithms`](#/guide/developer/custom_hpo_prob)."
    ]
   },
   {
@@ -66,9 +66,9 @@
    "source": [
     "## A simple example\n",
     "\n",
-    "Here, we'll demonstrate a simple example of using EvoX for HPO. Specifically, we will use the [PSO](#PSO) algorithm to optimize the hyperparameters of the [PSO](#PSO) algorithm for solving the sphere problem.\n",
+    "Here, we'll demonstrate a simple example of using EvoX for HPO. Specifically, we will use the [`PSO`](#PSO) algorithm to optimize the hyperparameters of the [`PSO`](#PSO) algorithm for solving the sphere problem.\n",
     "\n",
-    "Please note that this chapter provides only a brief overview of HPO deployment. For a more detailed guide, refer to [Deploy HPO with Custom Algorithms](#/guide/developer/custom_hpo_prob).\n",
+    "Please note that this chapter provides only a brief overview of HPO deployment. For a more detailed guide, refer to [`Deploy HPO with Custom Algorithms`](#/guide/developer/custom_hpo_prob).\n",
     "\n",
     "To start, let's import the necessary modules."
    ]
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we can use the [StdWorkflow](#StdWorkflow) to wrap the [problem](#evox.problems), [algorithm](#evox.algorithms) and [monitor](#Monitor). Then we use the [HPOProblemWrapper](#HPOProblemWrapper) to transform the [StdWorkflow](#StdWorkflow) to an HPO problem."
+    "Next, we can use the [`StdWorkflow`](#StdWorkflow) to wrap the [`problem`](#evox.problems), [`algorithm`](#evox.algorithms) and [`monitor`](#Monitor). Then we use the [`HPOProblemWrapper`](#HPOProblemWrapper) to transform the [`StdWorkflow`](#StdWorkflow) to an HPO problem."
    ]
   },
   {
@@ -137,13 +137,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The [HPOProblemWrapper](#HPOProblemWrapper) takes 4 arguments:\n",
+    "The [`HPOProblemWrapper`](#HPOProblemWrapper) takes 4 arguments:\n",
     "1. iterations: The number of iterations to be executed in the optimization process.\n",
     "2. num_instances: The number of instances to be executed in parallel in the optimization process.\n",
-    "3. workflow: The workflow to be used in the optimization process. Must be wrapped by [jit_class](#jit_class).\n",
+    "3. workflow: The workflow to be used in the optimization process. Must be wrapped by [`jit_class`](#jit_class).\n",
     "4. copy_init_state: Whether to copy the initial state of the workflow for each evaluation. Defaults to `True`. If your workflow contains operations that IN-PLACE modify the tensor(s) in initial state, this should be set to `True`. Otherwise, you can set it to `False` to save memory.\n",
     "\n",
-    "We can verify whether the [HPOProblemWrapper](#HPOProblemWrapper) correctly recognizes the hyperparameters we define. Since no modifications are made to the hyperparameters across the 5 instances, they should remain identical for all instances."
+    "We can verify whether the [`HPOProblemWrapper`](#HPOProblemWrapper) correctly recognizes the hyperparameters we define. Since no modifications are made to the hyperparameters across the 5 instances, they should remain identical for all instances."
    ]
   },
   {
@@ -172,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also define a custom set of hyperparameter values. It is important to ensure that the number of hyperparameter sets matches the number of instances in the [HPOProblemWrapper](#HPOProblemWrapper). Additionally, custom hyperparameters must be provided as a dictionary and wrapped using the [Parameter](#Parameter)."
+    "We can also define a custom set of hyperparameter values. It is important to ensure that the number of hyperparameter sets matches the number of instances in the [`HPOProblemWrapper`](#HPOProblemWrapper). Additionally, custom hyperparameters must be provided as a dictionary and wrapped using the [`Parameter`](#Parameter)."
    ]
   },
   {
@@ -220,11 +220,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we use the [PSO](#PSO) algorithm to optimize the hyperparameters of the [PSO](#PSO) algorithm.\n",
+    "Now, we use the [`PSO`](#PSO) algorithm to optimize the hyperparameters of the [`PSO`](#PSO) algorithm.\n",
     "\n",
-    "It is important to ensure that the population size of the [PSO](#PSO) matches the number of instances; otherwise, unexpected errors may occur.\n",
+    "It is important to ensure that the population size of the [`PSO`](#PSO) matches the number of instances; otherwise, unexpected errors may occur.\n",
     "\n",
-    "Additionally, the solution needs to be transformed in the outer workflow, as the [HPOProblemWrapper](#HPOProblemWrapper) requires the input to be in the form of a dictionary."
+    "Additionally, the solution needs to be transformed in the outer workflow, as the [`HPOProblemWrapper`](#HPOProblemWrapper) requires the input to be in the form of a dictionary."
    ]
   },
   {
