delete "[``]" for some chapter quotes.

--- a/docs/source/guide/developer/custom_hpo_prob.ipynb
+++ b/docs/source/guide/developer/custom_hpo_prob.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Deploy HPO with Custom Algorithms\n",
     "\n",
-    "In this chapter, we will focus on deploying HPO with custom algorithms, emphasizing the details rather than the overall workflow. A brief introduction to HPO deployment is provided in the previous chapter, [`Efficient HPO with EvoX`](#/guide/user/3-hpo), and prior reading is highly recommended."
+    "In this chapter, we will focus on deploying HPO with custom algorithms, emphasizing the details rather than the overall workflow. A brief introduction to HPO deployment is provided in the previous chapter, [Efficient HPO with EvoX](#/guide/user/3-hpo), and prior reading is highly recommended."
    ]
   },
   {
@@ -17,7 +17,7 @@
     "\n",
     "Since we need to transform the inner algorithm into the problem, it's crucial that the inner algorithm is parallelizable. Therefore, some modifications to the algorithm may be necessary.\n",
     "\n",
-    "To ensure the function is JIT-compilable, it must meet the conditions outlined in [`JIT compoents`](#/guide/developer/2-jit-able). In addition to these requirements, the algorithm must also satisfy the following two constraints:\n",
+    "To ensure the function is JIT-compilable, it must meet the conditions outlined in [JIT compoents](#/guide/developer/2-jit-able). In addition to these requirements, the algorithm must also satisfy the following two constraints:\n",
     "\n",
     "1. The algorithm should have no methods with in-place operations on the attributes of the algotirhm itself.\n",
     "\n",
@@ -69,9 +69,9 @@
     "        pass\n",
     "```\n",
     "\n",
-    "In EvoX, we can easily make the algorithm parallelizable by the [`@trace_impl`](#trace_impl) decorator. \n",
+    "In EvoX, we can easily make the algorithm parallelizable by the [`@trace_impl`](trace_impl) decorator. \n",
     "\n",
-    "The parameter of this decorator is a non-parallelizable function, and the decorated function is a rewrite of the original function. Detailed introduction of [`@trace_impl`](#trace_impl) can be found in [`JIT compoents`](#/guide/developer/2-jit-able).\n",
+    "The parameter of this decorator is a non-parallelizable function, and the decorated function is a rewrite of the original function. Detailed introduction of [`@trace_impl`](#trace_impl) can be found in [JIT compoents](#/guide/developer/2-jit-able).\n",
     "\n",
     "Under this mechanism, we can retain the original function for use outside HPO tasks while enabling efficient computation within HPO tasks. Moreover, this modification is highly convenient."
    ]
