--- a/docs/source/guide/user/3-hpo.ipynb
+++ b/docs/source/guide/user/3-hpo.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "We provide an [`HPOFitnessMonitor`](#HPOFitnessMonitor) that supports calculating 'IGD' and 'HV' metrics for multi-objective problems, as well as the minimum value for single-objective problems.\n",
     "\n",
-    "It is important to note that the [`HPOFitnessMonitor`](#HPOFitnessMonitor) is a basic monitor designed for HPO problems. You can also create your own customized monitor flexibly using the approach outlined in [`Deploy HPO with Custom Algorithms`](#/guide/developer/custom_hpo_prob)."
+    "It is important to note that the [`HPOFitnessMonitor`](#HPOFitnessMonitor) is a basic monitor designed for HPO problems. You can also create your own customized monitor flexibly using the approach outlined in [Deploy HPO with Custom Algorithms](#/guide/developer/custom_hpo_prob)."
    ]
   },
   {
@@ -66,9 +66,9 @@
    "source": [
     "## A simple example\n",
     "\n",
-    "Here, we'll demonstrate a simple example of using EvoX for HPO. Specifically, we will use the [`PSO`](#PSO) algorithm to optimize the hyperparameters of the [`PSO`](#PSO) algorithm for solving the sphere problem.\n",
+    "Here, we'll demonstrate a simple example of using EvoX for HPO. Specifically, we will use the [PSO](#PSO) algorithm to optimize the hyperparameters of the [PSO](#PSO) algorithm for solving the sphere problem.\n",
     "\n",
-    "Please note that this chapter provides only a brief overview of HPO deployment. For a more detailed guide, refer to [`Deploy HPO with Custom Algorithms`](#/guide/developer/custom_hpo_prob).\n",
+    "Please note that this chapter provides only a brief overview of HPO deployment. For a more detailed guide, refer to [Deploy HPO with Custom Algorithms](#/guide/developer/custom_hpo_prob).\n",
     "\n",
     "To start, let's import the necessary modules."
    ]
@@ -220,9 +220,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we use the [`PSO`](#PSO) algorithm to optimize the hyperparameters of the [`PSO`](#PSO) algorithm.\n",
+    "Now, we use the [PSO](#PSO) algorithm to optimize the hyperparameters of the [PSO](#PSO) algorithm.\n",
     "\n",
-    "It is important to ensure that the population size of the [`PSO`](#PSO) matches the number of instances; otherwise, unexpected errors may occur.\n",
+    "It is important to ensure that the population size of the [PSO](#PSO) matches the number of instances; otherwise, unexpected errors may occur.\n",
     "\n",
     "Additionally, the solution needs to be transformed in the outer workflow, as the [`HPOProblemWrapper`](#HPOProblemWrapper) requires the input to be in the form of a dictionary."
    ]
