1.Convert pic to .png 2.Modify 3 doc errors.

--- a/docs/source/guide/developer/custom_hpo_prob.ipynb
+++ b/docs/source/guide/developer/custom_hpo_prob.ipynb
@@ -71,7 +71,7 @@
     "\n",
     "In EvoX, we can easily make the algorithm parallelizable by the [`@trace_impl`](trace_impl) decorator. \n",
     "\n",
-    "The parameter of this decorator is a non-parallelizable function, and the decorated function is a rewrite of the original function. Detailed introduction of [`@trace_impl`](#trace_impl) can be found in [JIT compoents](#/guide/developer/2-jit-able).\n",
+    "The parameter of this decorator is a non-parallelizable function, and the decorated function is a rewrite of the original function. Detailed introduction of [`@trace_impl`](#trace_impl) can be found in [JIT Components](#/guide/developer/2-jit-able).\n",
     "\n",
     "Under this mechanism, we can retain the original function for use outside HPO tasks while enabling efficient computation within HPO tasks. Moreover, this modification is highly convenient."
    ]
@@ -141,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we define the algorithm. The original `step` function is non-parallelizable, so we rewrite it using the [`@trace_impl`](#trace_impl) decorator to make it parallelizable. Additionally, we modify in-place operations and adjust the Python control flow."
+    "Next, we define the algorithm. The original `step` function is non-parallelizable, so we rewrite it using the [`@trace_impl`](#trace_impl) decorator to make it parallelizable. Specifically, we modify in-place operations and adjust the Python control flow."
    ]
   },
   {
@@ -205,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To handle the Python control flow, we use [`TracingCond`](#TracingCond), [`TracingWhile`](#TracingWhile) and [`TracingSwitch`](#TracingSwitch). Since, in tracing mode, variables outside the method may be incorrectly interpreted as static variables, we need to use state to track them. A detailed introduction to [`TracingCond`](#TracingCond), [`TracingWhile`](#TracingWhile) and [`TracingSwitch`](#TracingSwitch) can be found in JIT Components. Below, we provide two equivalent implementations for the `trace_step` method.\n",
+    "To handle the Python control flow, we use [`TracingCond`](#TracingCond), [`TracingWhile`](#TracingWhile) and [`TracingSwitch`](#TracingSwitch). Since, in tracing mode, variables outside the method may be incorrectly interpreted as static variables, we need to use state to track them. A detailed introduction to [`TracingCond`](#TracingCond), [`TracingWhile`](#TracingWhile) and [`TracingSwitch`](#TracingSwitch) can be found in [JIT Components](#/guide/developer/2-jit-able). Below, we provide two equivalent implementations for the `trace_step` method.\n",
     "\n",
     "```python\n",
     "# Equivalent to the following code (Local function style)\n",
@@ -303,7 +303,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also specify our own set of hyperparameter values. Note that the number of hyperparameter sets must match the number of instances in the [`HPOProblemWrapper`](#HPOProblemWrapper). The custom hyperparameters should be provided as a dictionary and wrapped using the [`Parameter`](#Parameter)."
+    "We can also specify our own set of hyperparameter values. Note that the number of hyperparameter sets must match the number of instances in the [`HPOProblemWrapper`](#HPOProblemWrapper). The custom hyperparameters should be provided as a dictionary whose values are wrapped in the [`Parameter`](#Parameter)."
    ]
   },
   {
