--- a/docs/source/guide/user/3-hpo.ipynb
+++ b/docs/source/guide/user/3-hpo.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "HPO plays a crucial role in many machine learning tasks but is often overlooked due to its high computational cost, which can sometimes take days to process, as well as the challenges involved in deployment.\n",
     "\n",
-    "With EvoX, we can simplify HPO deployment using the [`HPOProblemWrapper`](#HPOProblemWrapper) and achieve efficient computation by leveraging the vmap method and GPU acceleration."
+    "With EvoX, we can simplify HPO deployment using the [`HPOProblemWrapper`](#HPOProblemWrapper) and achieve efficient computation by leveraging the `vmap` method and GPU acceleration."
    ]
   },
   {
@@ -19,7 +19,7 @@
    "source": [
     "## Transforming Workflow into Problem\n",
     "\n",
-    "```{image} /_static/HPO_structure.svg\n",
+    "```{image} /_static/HPO_structure.png\n",
     ":alt: HPO structure\n",
     ":width: 600px\n",
     ":align: center\n",
@@ -172,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also define a custom set of hyperparameter values. It is important to ensure that the number of hyperparameter sets matches the number of instances in the [`HPOProblemWrapper`](#HPOProblemWrapper). Additionally, custom hyperparameters must be provided as a dictionary and wrapped using the [`Parameter`](#Parameter)."
+    "We can also define a custom set of hyperparameter values. It is important to ensure that the number of hyperparameter sets matches the number of instances in the [`HPOProblemWrapper`](#HPOProblemWrapper). Additionally, custom hyperparameters must be provided as a dictionary whose values are wrapped using the [`Parameter`](#Parameter)."
    ]
   },
   {
