Update the docs.

--- a/docs/source/example/moalg.ipynb
+++ b/docs/source/example/moalg.ipynb
@@ -25,7 +25,6 @@
     "from torch.profiler import ProfilerActivity, profile\n",
     "\n",
     "from evox.algorithms import RVEA\n",
-    "from evox.core import jit, use_state\n",
     "from evox.metrics import igd\n",
     "from evox.problems.numerical import DTLZ2\n",
     "from evox.workflows import StdWorkflow"
@@ -36,12 +35,12 @@
    "metadata": {},
    "source": [
     "## (Optional) Use GPU to run the code\n",
-    "Often, we want to run our code on a GPU because it will run faster. The following code sets the default to run on GPU. Using the CPU is also fine if no device is available."
+    "We often prefer to run our code on a GPU for faster execution. However, if a GPU is unavailable, running on a CPU is also acceptable."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,12 +77,7 @@
     "algo = RVEA(pop_size=100, n_objs=3, lb=-torch.zeros(12), ub=torch.ones(12))\n",
     "workflow = StdWorkflow()\n",
     "workflow.setup(algo, prob)\n",
-    "workflow.init_step()\n",
-    "\n",
-    "# Init the state_step and the jit_state_step\n",
-    "state_step = use_state(lambda: workflow.step)\n",
-    "state = state_step.init_state()\n",
-    "jit_state_step = jit(state_step, trace=True, example_inputs=(state,))"
+    "workflow.init_step()"
    ]
   },
   {
@@ -95,23 +89,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.5292, device='cuda:0')\n",
-      "tensor(0.1605, device='cuda:0')\n",
-      "tensor(0.0774, device='cuda:0')\n",
-      "tensor(0.0614, device='cuda:0')\n",
-      "tensor(0.0581, device='cuda:0')\n",
-      "tensor(0.0569, device='cuda:0')\n",
-      "tensor(0.0556, device='cuda:0')\n",
-      "tensor(0.0550, device='cuda:0')\n",
-      "tensor(0.0553, device='cuda:0')\n",
-      "tensor(0.0545, device='cuda:0')\n"
+      "tensor(0.4746, device='cuda:0')\n",
+      "tensor(0.1650, device='cuda:0')\n",
+      "tensor(0.0902, device='cuda:0')\n",
+      "tensor(0.0653, device='cuda:0')\n",
+      "tensor(0.0586, device='cuda:0')\n",
+      "tensor(0.0564, device='cuda:0')\n",
+      "tensor(0.0559, device='cuda:0')\n",
+      "tensor(0.0551, device='cuda:0')\n",
+      "tensor(0.0546, device='cuda:0')\n",
+      "tensor(0.0544, device='cuda:0')\n"
      ]
     }
    ],
@@ -120,11 +114,29 @@
     "t = time.time()\n",
     "with profile(activities=[ProfilerActivity.CPU, ProfilerActivity.CUDA], record_shapes=True, profile_memory=True) as prof:\n",
     "    for i in range(100):\n",
-    "        state = jit_state_step(state)\n",
-    "        fit = state[\"self.algorithm.fit\"]\n",
+    "        workflow.step()\n",
+    "        fit = workflow.algorithm.fit\n",
     "        fit = fit[~torch.isnan(fit).any(dim=1)]\n",
     "        if i % 10 == 0:\n",
     "          print(igd(fit, pf))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(Optional) If needed, you can use the following code to get more information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(prof.key_averages().table())\n",
+    "# torch.cuda.synchronize()\n",
+    "# print(time.time() - t)"
    ]
   }
  ],
