--- a/docs/source/example/moalg.ipynb
+++ b/docs/source/example/moalg.ipynb
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(Optional) If needed, you can use the following code to get more information"
+    "(Optional) You can uncomment and execute the following code to print a table to view the hotspot functions."
    ]
   },
   {
