Add hpo in index.

--- a/docs/source/guide/developer/custom_hpo_prob.ipynb
+++ b/docs/source/guide/developer/custom_hpo_prob.ipynb
@@ -69,7 +69,7 @@
     "        pass\n",
     "```\n",
     "\n",
-    "In EvoX, we can easily make the algorithm parallelizable by the [`@trace_impl`](trace_impl) decorator. \n",
+    "In EvoX, we can easily make the algorithm parallelizable by the [`@trace_impl`](#trace_impl) decorator. \n",
     "\n",
     "The parameter of this decorator is a non-parallelizable function, and the decorated function is a rewrite of the original function. Detailed introduction of [`@trace_impl`](#trace_impl) can be found in [JIT Components](#/guide/developer/2-jit-able).\n",
     "\n",
