Update the installation guide

--- a/docs/source/guide/install/install.ipynb
+++ b/docs/source/guide/install/install.ipynb
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PyTorch is available via pip and conda. To install PyTorch, simply run:"
+    "This guide provides instructions for installing PyTorch under various environments, including CPU-only setups and GPU-accelerated configurations using CUDA or ROCm. PyTorch is available via pip and conda. To install PyTorch, simply run:"
    ]
   },
   {
