Revise the code examples in the installation guide

--- a/docs/source/guide/install/install.ipynb
+++ b/docs/source/guide/install/install.ipynb
@@ -161,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{warning}\n",
+    "```warning\n",
     "Do **NOT** install any NVIDIA GPU Linux driver within WSL 2. Install the driver on the Windows side.\n",
     "```"
    ]
@@ -180,6 +180,7 @@
    "metadata": {},
    "source": [
     "#### Ubuntu:\n",
+    "\n",
     "```bash\n",
     "sudo apt install nvidia-driver-535 nvidia-utils-535\n",
     "```"
@@ -222,13 +223,11 @@
    "metadata": {},
    "source": [
     "#### Ubuntu:\n",
-    "\n",
     "```bash\n",
     "sudo apt install nvidia-cuda-toolkit\n",
     "```\n",
     "\n",
     "#### ArchLinux:\n",
-    "\n",
     "```bash\n",
     "sudo pacman -S cuda cudnn nccl\n",
     "```\n",
@@ -274,25 +273,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'torch'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mis_available())\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(torch\u001b[38;5;241m.\u001b[39mones(\u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m2\u001b[39m)\u001b[38;5;241m.\u001b[39mcuda())\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.5.1\n",
+      "tensor([[1., 1., 1., 1., 1.],\n",
+      "        [1., 1., 1., 1., 1.],\n",
+      "        [1., 1., 1., 1., 1.],\n",
+      "        [1., 1., 1., 1., 1.],\n",
+      "        [1., 1., 1., 1., 1.]])\n",
+      "False\n"
      ]
     }
    ],
    "source": [
     "import torch\n",
-    "print(torch.cuda.is_available())\n",
-    "print(torch.ones(2, 2).cuda())"
+    "print(torch.__version__)\n",
+    "print(torch.ones(5,5))\n",
+    "print(torch.cuda.is_available())"
    ]
   }
  ],
