Add supervised learning examples for neuroevolution on EvoX.

--- a/docs/source/example/custom_algo_prob.ipynb
+++ b/docs/source/example/custom_algo_prob.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Custom algorithm and problem\n",
+    "# Custom Algorithm and Problem\n",
     "In this notebook, we will show how to use the [`Algorithm`](#evox.core.components.Algorithm) and [`Problem`](#evox.core.components.Problem) to create a custom algorithm and problem. Here we will give an example of **implementing a PSO algorithm that solves the Sphere problem**.\n",
     "\n"
    ]
