--- a/docs/source/example/moalg.ipynb
+++ b/docs/source/example/moalg.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "source": [
     "## Running example: RVEA on DTLZ2 problem\n",
-    "The following code is used to set up the DTLZ2 problem and the RVEA algorithm. More information about the problem and algorithm can be found in the corresponding section of the documentation."
+    "The following code is used to set up the [`DTLZ2`](#evox.problems.numerical.dtlz) problem and the [`RVEA`](#evox.algorithms.mo.rvea) algorithm. More information about the problem and algorithm can be found in the corresponding section of the documentation."
    ]
   },
   {
