Update the numerical optimization document and the comments of CMAES.

--- a/docs/source/example/so-algorithm.ipynb
+++ b/docs/source/example/so-algorithm.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, we will provide a step-by-step tutorial on how to use EvoX to optimize the Ackley function with the Particle Swarm Optimization (PSO) algorithm. Both algorithm and problem are built-in.\n",
+    "This notebook offers a step-by-step tutorial on utilizing EvoX to optimize the Ackley function through the Particle Swarm Optimization (PSO) algorithm. Both the PSO algorithm and the Ackley optimization problem are integrated as built-in components within the EvoX framework.\n",
     "\n",
     "First, we should import all necessary modules including `PSO` (algorithm), `Ackley` (problem) and `StdWorkflow` & `EvalMonitor` (workflow)."
    ]
